--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,12 +1,20 @@
 <h1>New User</h1>
 
-<%form_for @user.each do |f|%>
+<%= form_for @user do |f|%>
 <%= f.label "Name: "%>
 <%= f.text_field :name%>
+<br>
+<%= f.label "Gender: "%>
+<%= f.text_field :gender%>
 <br>
 <%= f.label "Profile Pic: "%>
 <%= f.text_field :img_url%>
 <br>
-
-<%f.submit%>
+<%= f.label "Email Address: "%>
+<%= f.text_field :email%>
+<br>
+<%= f.label "Password: "%>
+<%= f.text_field :password_digest%>
+<br>
+<%= f.submit%>
 <%end%>
