--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,3 +6,5 @@
 <br>
 <h3><%= @user.gender.upcase%></h3>
 
+<%= button_to "Delete User Profile?", user_path(@user), method: :delete %>
+  <%= link_to "Main Page", users_path %>
