--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,7 +5,7 @@
 <%= f.text_field :name%>
 <br>
 <%= f.label "Gender: "%>
-<%= f.text_field :gender%>
+<%# f.collection_select :user_id, @users, :id, :gender %>
 <br>
 <%= f.label "Profile Pic: "%>
 <%= f.text_field :img_url%>
