--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,4 +7,4 @@
 <h3><%= @user.gender.upcase%></h3>
 
 <%= button_to "Delete User Profile?", user_path(@user), method: :delete %>
-  <%= link_to "Main Page", users_path %>
+<br><%= link_to "Main Page", users_path %>
