--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,9 +5,9 @@
 <%= f.text_field :name%>
 <br>
 <%= f.label "Gender: "%>
-<%# f.collection_select :user_id, @users, :id, :gender %>
+<%= f.text_field :gender %>
 <br>
-<%= f.label "Profile Pic: "%>
+<%= f.label "Profile Pic URL: "%>
 <%= f.text_field :img_url%>
 <br>
 <%= f.label "Email Address: "%>
