--- a/app/views/outfit_clothings/new.html.erb
+++ b/app/views/outfit_clothings/new.html.erb
@@ -2,6 +2,6 @@
 
 <%= form_for @outfit_clothing do |f| %>
     <p><strong><%= f.label "Choose a Top: " %>
-    <%= f.collection_select :clothing_id, @outfit_clothing, :id, :name %></p>
+    <%= f.collection_select :clothing_id, @clothings, :id, :name %></p>
     <%= f.submit %>
 <% end %>
