--- a/app/views/outfits/index.html.erb
+++ b/app/views/outfits/index.html.erb
@@ -3,3 +3,5 @@
 <% @outfits.each do |outfit|%>
 <li><%= link_to outfit.name, outfit_path(outfit)%>
 <% end %>
+
+<p><%= link_to "Create a New Fit", new_outfit_path %>
