--- a/app/views/outfits/show.html.erb
+++ b/app/views/outfits/show.html.erb
@@ -3,10 +3,10 @@
 <%= @outfit.name %>
 <br>
 <% @outfit.outfit_clothings.map do |outfit| %>
-    <p><img src="<%= outfit.clothing.img_url %>" alt="<%= outfit.clothing.name %>"></p>
+    <p><%= outfit.clothing.category %> : <img src="<%= outfit.clothing.img_url %>" alt="<%= outfit.clothing.name %>"></p>
 <% end %>
 <br>
-<%= button_to "Add Clothing to this Fit", new_outfit_clothing_path %>
+<%= link_to "Add Clothing to this Fit", new_outfit_clothing_path(@outfit.id) %>
 <br>
 <%= link_to "Main Page", outfits_path %>
 
