--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,18 @@
   </head>
 
   <body>
+  
+    <div class='right'>
+
+      <% if @current_user %>
+        <%= link_to "Welcome #{@current_user.name}!", @current_user  %>
+        <%= link_to "Logout", logout_path, method: :delete  %>
+      <% else %>
+        <%= link_to 'Signup', new_user_path %>
+        <%= link_to 'Login', new_login_path %>
+      <% end %>
+
+    </div>
     <%= yield %>
   </body>
 </html>
