--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,8 +7,8 @@
 <%= f.label "Gender: "%>
 <%= f.text_field :gender %>
 <br>
-<%= f.label "Profile Pic URL: "%>
-<%= f.text_field :img_url%>
+<%= f.label "Profile Pic: "%>
+<%= f.file_field :avatar%>
 <br>
 <%= f.label "Email Address: "%>
 <%= f.text_field :email%>
