--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,13 @@
 <h1>New User</h1>
 
+<h1>Signup</h1>
+
+  <% if flash[:errors] %>
+    <% flash[:errors].each do |error| %>
+      <p style="color: red;"><%= error %></p>
+    <% end %>
+  <% end %>
+
 <%= form_for @user do |f|%>
 <%= f.label "Name: "%>
 <%= f.text_field :name%>
