--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,10 +2,8 @@
 
 <h1>Signup</h1>
 
-  <% if flash[:errors] %>
-    <% flash[:errors].each do |error| %>
-      <p style="color: red;"><%= error %></p>
-    <% end %>
+  <% if flash[:messages] %>
+    <% flash[:messages]%>
   <% end %>
 
 <%= form_for @user do |f|%>
