Added nil for collection select still working on closets

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,9 +14,11 @@
 
 <h3>My Outfits</h3>
     <% @user.outfits.each do |outfit| %>
-      <p><%= outfit.name %></p>
+      <p><%= link_to outfit.name, outfits_path(@outfit) %></p>
       <hr>
     <% end %>
 
-<%= button_to "Delete User Profile?", user_path(@user), method: :delete %>
-<%= link_to "Main Page", users_path %>
+
+<p><%= link_to "Closet", closets_path %></p>
+<p><%= link_to "Main Page", users_path %></p>
+<p><%= button_to "Delete User Profile?", user_path(@user), method: :delete %></p>
