--- a/app/views/closets/index.html.erb
+++ b/app/views/closets/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Closet index</h1>
 
+<% @closets.clothings.each do |closet| %>
+    <%= closet%>
+<% end %>
 
-
-<%= link_to "show", closet_path(@closets.ids) %>
+<p><%= link_to "show", closet_path(@closets.ids) %></p>
