--- a/app/views/outfit_clothings/new.html.erb
+++ b/app/views/outfit_clothings/new.html.erb
@@ -3,13 +3,13 @@
 <%= form_tag "/outfit_clothings" do %>
     <%= hidden_field_tag :outfit_id, @outfit.id %>
     <p><strong><%= label_tag "Choose a Top: " %>
-    <%= collection_select "outfit_clothing[]", :clothing_id, @shirts, :id, :name %></p>
+    <%= collection_select("outfit_clothing[]", :clothing_id, @shirts, :id, :name, { include_blank: "Tops" }, { :class => "input-xlarge" } ) %></p>
     <p><strong><%= label_tag "Choose a Bottom: " %>
-    <%= collection_select "outfit_clothing[]", :clothing_id, @pants, :id, :name %></p>
+    <%= collection_select("outfit_clothing[]", :clothing_id, @pants, :id, :name, { include_blank: "Bottoms" }, { :class => "input-xlarge" } ) %></p>
     <p><strong><%= label_tag "Choose an Accessory: " %>
-    <%= collection_select "outfit_clothing[]", :clothing_id, @accessories, :id, :name %></p>
+    <%= collection_select("outfit_clothing[]", :clothing_id, @accessories, :id, :name, { include_blank: "Accessories" }, { :class => "input-xlarge" } ) %></p>
     <p><strong><%= label_tag "Choose a Shoe: " %>
-    <%= collection_select "outfit_clothing[]", :clothing_id, @shoes, :id, :name %></p>
+    <%= collection_select("outfit_clothing[]", :clothing_id, @shoes, :id, :name, { include_blank: "Shoes" }, { :class => "input-xlarge" } ) %></p>
     <%= submit_tag "Add to Outfit" %>
 <% end %>
 
