--- a/app/views/outfits/new.html.erb
+++ b/app/views/outfits/new.html.erb
@@ -1,7 +1,7 @@
 <h3>Let's Put Together A New Fit</h3>
 
 <%= form_for @outfit do |f| %>
-    <%= f.hidden_field :user_id, value: User.first.id %></p>
+    <%= f.hidden_field :user_id, value: @current_user.id %></p>
     <p><strong><%= f.label "Name:" %>
     <%= f.text_field :name %></p>
     <%= f.submit %>
