--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,7 @@
 
 <h3>My Outfits</h3>
     <% @user.outfits.each do |outfit| %>
-      <p><%= link_to outfit.name, outfits_path(@outfit) %></p>
+      <p><%= link_to outfit.name, outfit_path(outfit) %></p>
       <hr>
     <% end %>
 
