--- a/app/views/closets/index.html.erb
+++ b/app/views/closets/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Closet index</h1>
 
 <% @my_clothes.each do |clothing| %>
-    <%= link_to clothing.name, clothing_path(clothing) %>
+    <li><%= link_to clothing.name, clothing_path(clothing) %></li>
 <% end %>
 
 <p><%= link_to "Profile Page", user_path(@current_user) %></p>
