--- a/app/views/clothings/index.html.erb
+++ b/app/views/clothings/index.html.erb
@@ -5,3 +5,5 @@
 <li><%= link_to clothing.name, clothing_path(clothing)%>
 <br>
 <%end%>
+
+<%= link_to "See the Outfits by Gender", clothings_path(:sort =>'gender') %>
