--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -20,7 +20,7 @@
 <%= f.text_field :email%>
 <br>
 <%= f.label "Password: "%>
-<%= f.password_field :password_digest%>
+<%= f.password_field :password%>
 <br>
 <%= f.submit%>
 <%end%>
