--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,6 +21,6 @@
 <p><%= link_to "Closet", closets_path %></p>
 <p><%= link_to "All Clothes", clothings_path %>
 <p><%= link_to "Main Page", users_path %></p>
-<p><%= button_to "Edit Profile", edit_user_path %></p>
+<p><%= link_to "Edit Profile", edit_user_path %></p>
 <p><%= button_to "Delete User Profile?", user_path(@user), method: :delete %></p>
 
