--- a/app/views/clothings/index.html.erb
+++ b/app/views/clothings/index.html.erb
@@ -6,4 +6,4 @@
 <br>
 <%end%>
 
-<%= link_to "See the Outfits by Gender", clothings_path(:sort =>'gender') %>
+<%# link_to "See the Outfits by Gender", clothings_path(:sort =>'gender') %>
