--- a/app/views/outfits/index.html.erb
+++ b/app/views/outfits/index.html.erb
@@ -5,3 +5,4 @@
 <% end %>
 
 <p><%= link_to "Create a New Fit", new_outfit_path %>
+<%# link_to "See the Outfits by Category", outfits_path(:sort =>'Category') %>
