--- a/app/views/outfits/show.html.erb
+++ b/app/views/outfits/show.html.erb
@@ -1,14 +1,15 @@
+<%= link_to "My Closet", outfits_path %>
+
 <h1>Outfit Show Page</h1>
 
 <%= @outfit.name %>
 <br>
 <% @outfit.outfit_clothings.map do |outfit| %>
-    <p><%= outfit.clothing.category %> : <img src="<%= outfit.clothing.img_url %>" alt="<%= outfit.clothing.name %>"></p>
+    <p><%= outfit.clothing.category %> : <%= image_tag outfit.clothing.img_url %></p>
 <% end %>
 <br>
 <%= link_to "Add Clothing to this Fit", new_outfit_clothing_path(@outfit.id) %>
 <br>
-<%= link_to "Main Page", outfits_path %>
 
 <p><%= button_to "Delete This Fit?", outfit_path(@outfit), method: :delete %></p>
 
