--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,66 @@
  *= require_self
  */
 
- img {
+ /* img {
     max-width: 200px;
- }
+ } */
+
+ nav {
+   background-color: rgba(89, 4, 30, 0.9);
+   max-width: 95%;
+   margin: 0px auto;
+   height: 35px;
+   border-radius: 5px;
+  }
+
+  .form-container {
+   text-align: center;
+   max-width: 85%;
+   margin: 0px auto;
+   background-color: rgba(89, 4, 30, 0.9);
+   height: 25vh;
+   border-radius: 10px;
+}
+
+.form-input {
+   font-weight: bolder;
+   font-size: large;
+}
+
+
+h1 {
+   display: block;
+   color: rgba(255, 180, 0, 0.9);
+   font-size: 2em;
+   margin-block-start: 1.67em;
+   margin-block-end: -0.30em;
+   margin-inline-start: 0px;
+   padding: 40px;
+   margin-inline-end: 0px;
+   /* font-weight: bold; */
+}
+
+  .banner-image {
+   width: 95%;
+   margin: 0 auto;
+   height: 500px;
+   background-image: url('banner.jpeg');
+   background-size: cover;
+   border-radius: 5px;
+  }
+
+  .right {
+     float: right;
+     padding: 6px;
+  }
+ 
+  nav a {
+     text-decoration: none;
+     color: rgb(255 180 0);
+     /* font-weight: bold; */
+     font-size: large;
+  }
+
+  body {
+   background: gainsboro;
+}
