--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,19 +11,24 @@
   </head>
 
   <body>
-  <br>
-  <br>
+    <div class='banner-image'>
+      <div class='banner-overlay'>
+        <%# image_tag 'FFY_Banner_img.jpeg', class: 'ffy_logo' %>
+      </div>
+    </div>
+  <nav>
     <div class='right'>
-
       <% if @current_user %>
         <%= link_to "Welcome #{@current_user.name}!", @current_user  %>
         <%= button_to "Logout", logout_path, method: :delete  %>
       <% else %>
-        <%= link_to 'Signup', new_user_path %>
+        <%= link_to 'Sign up', new_user_path %> <a>|<a>
         <%= link_to 'Login', new_login_path %>
       <% end %>
 
     </div>
+  </nav>
+    
     <%= yield %>
   </body>
 </html>
