--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,11 @@
-<h1>User Index Page</h1>
+
+
+<head>
+    <title>All Users</title>
+</head>
 
 <% @users.each do |user|%>
 <li><%= link_to user.name, user_path(user)%>
 <%end%>
+
 
