--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,26 +1,37 @@
-<h1>New User</h1>
 
-<h1>Signup</h1>
-
+<div class="form-container">
   <% if flash[:messages] %>
     <% flash[:messages]%>
   <% end %>
 
+<h1>Create an Account</h1>
+<div class='form-input'>
 <%= form_for @user do |f|%>
 <%= f.label "Name: "%>
 <%= f.text_field :name%>
-<br>
+</div>
+
+<div class='form-input'>
 <%= f.label "Gender: "%>
 <%= f.text_field :gender %>
-<br>
+</div>
+
+<div class='form-input'>
 <%= f.label "Profile Pic: "%>
 <%= f.file_field :avatar%>
-<br>
+<div>
+
+<div class='form-input'>
 <%= f.label "Email Address: "%>
 <%= f.text_field :email%>
-<br>
+</div>
+
+<div class='form-input'>
 <%= f.label "Password: "%>
 <%= f.password_field :password%>
-<br>
-<%= f.submit%>
+</div>
+
+<%= f.submit "Done" %>
 <%end%>
+
+</div>
