--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
     <div class='banner-image'>
       <div class='banner-overlay'>
-        <%# image_tag 'FFY_Banner_img.jpeg', class: 'ffy_logo' %>
+        <%= image_tag 'logo.png', class: 'ffy_logo' %>
       </div>
     </div>
   <nav>
