--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,7 +22,7 @@
    background-color: rgba(89, 4, 30, 0.9);
    max-width: 95%;
    margin: 0px auto;
-   height: 35px;
+   height: 65px;
    border-radius: 5px;
   }
 
@@ -43,7 +43,7 @@
 
 h1 {
    display: block;
-   color: rgba(255, 180, 0, 0.9);
+   color: rgba(255, 180, 0, 0.7);
    font-size: 2em;
    margin-block-start: 1.67em;
    margin-block-end: -0.30em;
@@ -56,11 +56,19 @@ h1 {
   .banner-image {
    width: 95%;
    margin: 0 auto;
-   height: 500px;
+   height: 350px;
    background-image: url('banner.jpeg');
    background-size: cover;
    border-radius: 5px;
   }
+
+  .banner-overlay {
+   width: 96.6%;
+    height: 90%;
+    background-color: rgba(255, 255, 255, 0.4);
+    text-align: center;
+    padding: 23px;
+ }
 
   .right {
      float: right;
@@ -68,10 +76,14 @@ h1 {
   }
  
   nav a {
-     text-decoration: none;
-     color: rgb(255 180 0);
-     /* font-weight: bold; */
-     font-size: large;
+   text-decoration: none;
+   color: rgba(255, 180, 0, 0.7);
+   /* font-weight: bold; */
+   font-size: large;
+   float: left;
+   display: block;
+   padding: 2px;
+   font-weight: bold;
   }
 
   body {
