--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -63,11 +63,11 @@ h1 {
   }
 
   .banner-overlay {
-   width: 96.6%;
-    height: 90%;
-    background-color: rgba(255, 255, 255, 0.4);
-    text-align: center;
-    padding: 23px;
+      width: auto;
+      height: 90%;
+      background-color: rgba(255, 255, 255, 0.4);
+      text-align: center;
+      padding: 23px;
  }
 
   .right {
