--- a/app/views/outfits/show.html.erb
+++ b/app/views/outfits/show.html.erb
@@ -1,15 +1,28 @@
-<%= link_to "My Closet", outfits_path %>
+<div class="container">
+  <div class="parent">
+    <div class="div1">
+        <ul id="navbar">
+            <li><a><%= link_to "My Closet", closets_path %></a></li>
+            <li><a><%= link_to "Add Clothing to this Fit", new_outfit_clothing_path(@outfit.id) %></a></li>
+        </ul>
+    </div>
 
-<h1>Outfit Show Page</h1>
 
-<%= @outfit.name %>
-<br>
+    <div class="div7">
+        <h1 class="closet">Outfit <%= @outfit.name %></h1>
+        <hr>
+    </div>
+
+<div class="div8">
+      <div class="outfit-card">
 <% @outfit.outfit_clothings.map do |outfit| %>
     <p><%= outfit.clothing.category %> : <%= image_tag outfit.clothing.img_url %></p>
 <% end %>
-<br>
-<%= link_to "Add Clothing to this Fit", new_outfit_clothing_path(@outfit.id) %>
-<br>
+</div>
+    </div>
 
-<p><%= button_to "Delete This Fit?", outfit_path(@outfit), method: :delete %></p>
 
+<div class="div5s">
+      <a class="delete"><%= button_to "Delete This Fit?", outfit_path(@outfit), method: :delete %></a>
+    </div>
+</div>
