--- a/app/views/outfits/new.html.erb
+++ b/app/views/outfits/new.html.erb
@@ -1,12 +1,26 @@
-<h3>Let's Put Together A New Fit</h3>
+<div class="container">
+  <div class="parent">
+    <div class="div1">
+      <ul id="navbar">
+        <li><a><%= link_to "Go Shopping", clothings_path %></a></li>
+        <li><a><%= link_to "Go Back", user_path(@current_user) %></a></li>
+      </ul>
+    </div>
 
-<%= form_for @outfit do |f| %>
-    <%= f.hidden_field :user_id, value: @current_user.id %></p>
-    <p><strong><%= f.label "Name:" %>
-    <%= f.text_field :name %></p>
-    <%= f.submit %>
-<% end %>
+    <div class="div7">
+        <h1 class="closet">Let's Put Together A New Fit</h1>
+        <hr>
+    </div>
 
-<p><%= link_to "Go Back", outfits_path %>
-
-    <%# Have to change User.first.id %>
+    <div class="div8">
+        <div class="closet-card">
+            <%= form_for @outfit do |f| %>
+                <%= f.hidden_field :user_id, value: @current_user.id %></p>
+                <p><strong><%= f.label "Name:" %>
+                <%= f.text_field :name %></p>
+                <%= f.submit "Save"%>
+            <% end %>
+        </div>
+    </div>  
+</div>
+<%# link_to "Go Back", outfits_path %>
