--- a/app/views/outfits/show.html.erb
+++ b/app/views/outfits/show.html.erb
@@ -2,6 +2,7 @@
   <div class="parent">
     <div class="div1">
         <ul id="navbar">
+            <li><a><%= link_to "My Profile", user_path(@current_user) %></a></li>
             <li><a><%= link_to "My Closet", closets_path %></a></li>
             <li><a><%= link_to "Add Clothing to this Fit", new_outfit_clothing_path(@outfit.id) %></a></li>
         </ul>
@@ -22,7 +23,7 @@
     </div>
 
 
-<div class="div5s">
-      <a class="delete"><%= button_to "Delete This Fit?", outfit_path(@outfit), method: :delete %></a>
+<div class="div5">
+      <a class="delete"><%= button_to "Delete This Fit?", user_path(@current_user), method: :delete %></a>
     </div>
 </div>
