--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,7 @@
       <ul id="navbar">
         <li><a><%= link_to "My Closet", closets_path %></a></li>
         <li><a><%= link_to "Go Shopping", clothings_path %></a></li>
+        <li><a><%= link_to "Create a New Fit", new_outfit_path %></a></li>
         <li><a><%= link_to "Edit Profile", edit_user_path %></a></li>
       </ul>
     </div>
