fixed the signup and login pages

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,14 +26,14 @@
    border-radius: 5px;
   }
 
-  .form-container {
-   text-align: center;
-   max-width: 85%;
-   margin: 0px auto;
-   background-color: rgba(89, 4, 30, 0.9);
-   height: 25vh;
-   border-radius: 10px;
-}
+  /* .form-container { */
+   /* text-align: center; */
+   /* max-width: 85%; */
+   /* margin: 0px auto; */
+   /* background-color: rgba(89, 4, 30, 0.9); */
+   /* height: 25vh; */
+   /* border-radius: 10px; */
+/* } */
 
 .form-input {
    font-weight: bolder;
