--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,8 @@
 
-<div class="form-container">
-  
+<div class="welcome-card">
+<div class="welcome"> 
 <h1>Create an Account</h1>
+</div>
 <div class='form-input'>
 <%= form_for @user do |f|%>
 <%= f.label "Name: "%>
