--- a/app/views/outfit_clothings/new.html.erb
+++ b/app/views/outfit_clothings/new.html.erb
@@ -12,7 +12,7 @@
     </div>
 
 
-<div class="div8">
+<div class="div8n">
     <%= form_tag "/outfit_clothings" do %>
     <div class="welcome-card">
         <%= hidden_field_tag :outfit_id, @outfit.id %>
