--- a/app/assets/stylesheets/clothings.scss
+++ b/app/assets/stylesheets/clothings.scss
@@ -10,16 +10,31 @@
 //     align-content: flex-start;
 //   }
 
-// .clothing-parent {
-//     display: grid;
-//     grid-template-columns: 0.5fr repeat(4, 1fr);
-//     grid-template-rows: repeat(5, 1fr);
-//     grid-column-gap: 0px;
-//     grid-row-gap: 0px;
-//     margin-left: 3%;
-//     margin-right: 3%;
-//     // background-color: white;
-//   }
+
+
+
+.div8c { 
+  align-items: center;
+  grid-area: 2 / 2 / 6 / 6;
+  background-color: white;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  overflow-y: scroll;
+}
+
+.clothing-parent {
+    height: 70vh;
+    display: grid;
+    grid-template-columns: 0.5fr repeat(4, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    margin-left: 3%;
+    margin-right: 3%;
+    // background-color: white;
+  }
+
   
 //   .div9 { 
 //     background-color: rgba(89, 4, 30, 0.9);
@@ -47,14 +62,14 @@
     flex-grow: 4;
     border: 1px solid black;
     padding: 0px;
-    margin: 27px 0px;
-    margin-left: 90px;
+    margin: 19px 36px;;
+    // margin-left: 90px;
     text-align: center;
     font-weight: normal;
     font-size: 20px;
     border-radius: 5px;
     box-shadow: 10px -10px #59041e;
-    max-width: 20%;
+    width: 20%;
   }
   div.clothing-card img {
     max-width: 100px;
