--- a/app/assets/stylesheets/outfit_clothings.scss
+++ b/app/assets/stylesheets/outfit_clothings.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the OutfitClothings controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.div8n { 
+    align-items: center;
+    grid-area: 2 / 2 / 6 / 6;
+    background-color: white;
+    // display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    overflow-y: scroll;
+  }
