--- a/app/assets/stylesheets/outfits.scss
+++ b/app/assets/stylesheets/outfits.scss
@@ -3,17 +3,36 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
    
 
-    div.outfit-card {
+  div.outfit-card {
         border: 1px solid black;
         padding: 15px;
         margin: 10px 0px;
-        margin-left: 40px;
+        margin-left: 8.5%;
         text-align: center;
-        margin-block-start: -9.33em;
+        margin-block-start: 1.67em;
         margin-block-end: 1.7em;
         font-weight: bold;
         font-size: 23px;
         border-radius: 5px;
         box-shadow: 10px -10px rgba(89, 4, 30, 0.9);
         width: 80%;
-      }
+  }
+.div8s {
+  align-items: center;
+  grid-area: 2 / 2 / 6 / 6;
+  background-color: white;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  overflow-y: scroll;
+  height: 63vh;
+}
+
+  .div7s { 
+    height: 20vh;
+    margin: 0;
+    align-items: center;
+    text-align: center;
+    grid-area: 1 / 2 / 2 / 6;
+    background-color: white;
+  }
