--- a/app/views/clothings/index.html.erb
+++ b/app/views/clothings/index.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
-  <div class="parent">
+  <div class="clothing-parent">
     <div class="div1">
       <ul id="navbar">
-        <li><a><%= link_to "My Closet", closets_path %></a></li>
         <li><a><%= link_to "My Profile", user_path(@current_user) %></a></li>
+        <li><a><%= link_to "My Closet", closets_path %></a></li>
       </ul>
     </div>
 
@@ -11,6 +11,7 @@
         <h1 class="closet">All Clothes</h1>
         <hr>
     </div>
+    
 
     <div class="div8">
         <% @clothings.each do |clothing|%>
@@ -19,6 +20,7 @@
               <ul><a><%= link_to clothing.name, clothing_path(clothing)%><a></ul>
               </div>
           <% end %>
+          </div>
     </div>  
 
 <%# link_to "See the Outfits by Gender", clothings_path(:sort =>'gender') %>
